<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/blur_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:background="#E91F364A"
    android:padding="16dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goto_dua"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/yellow"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:padding="16dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:hint="@string/go_to"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_blue"
            android:background="@drawable/bg_round_corner"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"

            android:id="@+id/et_goto"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/go"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:id="@+id/btn_go"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>